--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Book Tracker</title>
     <script type="module" src="./scripts/auth.js"></script>
     <link rel="stylesheet" href="/styles/login-style.css">
-
+<!-- asdasdasd -->
 </head>
 <body>
     <div class="auth-container">
@@ -29,7 +29,7 @@
             <button type="submit" id="register-btn">Sign Up</button>
             <p>
                 <span>Already have an account? </span>
-                <a href="#" id="show-login">Log In</a><br>
+                <a href="#" id="show-login">Log In</a>
                 <span>Don't trust this?</span>
                 <a href="https://supabase.com/docs/guides/auth">Read to trust auth</a>
             </p>
