--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Book Tracker</title>
-    <script type="module" src="/scripts/auth.js"></script>
+    <script type="module" src="./scripts/auth.js"></script>
     <link rel="stylesheet" href="/styles/login-style.css">
 <!-- asdasdasd -->
 </head>
@@ -14,7 +14,7 @@
             <h2>Log In</h2>
             <input id="login-email"     type="email"     placeholder="Email (Google Email)"     required />
             <input id="login-password" type="password" placeholder="Password" required />
-            <button type="submit" id="login-btn">Log In</button>
+            <button type="submit" id="login-btn">Log Kaayo</button>
             <p>
                 <span>Don't have an account? </span>
                 <a href="#" id="show-register">Register</a>
