--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body>
     <div class="auth-container">
         <form id="login-form" class="active">
-            <h2>Log In</h2>
+            <h2>Log Kaayo</h2>
             <input id="login-email"     type="email"     placeholder="Email (Google Email)"     required />
             <input id="login-password" type="password" placeholder="Password" required />
-            <button type="submit" id="login-btn">Log Kaayo</button>
+            <button type="submit" id="login-btn">Log In</button>
             <p>
                 <span>Don't have an account? </span>
                 <a href="#" id="show-register">Register</a>
