--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="auth-container">
         <form id="login-form" class="active">
-            <h2>Log In</h2>
+            <h2>Log Kaayo</h2>
             <input id="login-email"     type="email"     placeholder="Email (Google Email)"     required />
             <input id="login-password" type="password" placeholder="Password" required />
             <button type="submit" id="login-btn">Log In</button>
@@ -31,7 +31,7 @@
                 <span>Already have an account? </span>
                 <a href="#" id="show-login">Log In</a>
                 <span>Don't trust this?</span>
-                <a href="https://supabase.com/docs/guides/auth">Read to trust auth</a>
+                <a href="https://supabase.com/docs/guides/auth" target="_blank">Read to trust auth</a>
             </p>
             <p id="register-status"></p>
         </form>
